# alchemist-sofle-firmware

./: .gitignore  Cargo.toml  Makefile.toml  build.rs
.cargo/: config.toml
src/: encoder.rs  i2c.rs  keyprobe.rs  led.rs  lib.rs  main.rs  main_left.rs  main_right.rs  oled.rs  uart.rs  usb.rs
src/frames/: banner_1.rs  banner_1_add.bit  banner_1_mask.bit  banner_2.rs  banner_2_add.bit  banner_2_mask.bit  body_1.rs  body_1_add.bit  body_1_mask.bit  body_2.rs  body_2_add.bit  body_2_mask.bit  mod.rs  sigil_1.rs  sigil_10.rs  sigil_10_add.bit  sigil_1_add.bit  sigil_2.rs  sigil_2_add.bit  sigil_3.rs  sigil_3_mask.bit  sigil_4.rs  sigil_4_mask.bit  sigil_5.rs  sigil_5_mask.bit  sigil_6.rs  sigil_6_add.bit  sigil_7.rs  sigil_7_mask.bit  sigil_8.rs  sigil_8_mask.bit  sigil_9.rs
