[package]
name = "alchemist-sofle-firmware"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[lib]
name = "alchemist"
path = "src/lib.rs"

[[bin]]
name = "alchemist-left"
path = "src/main_left.rs"

[[bin]]
name = "alchemist-right"
path = "src/main_right.rs"


[dependencies]
embassy-embedded-hal = { version = "0.2", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { version = "0.6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { version = "0.6", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"], git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.2", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"], git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }

fixed = { version = "1.23", default-features = false }
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-reset = { version = "0.1" }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
heapless = "0.8"
usbd-hid = "0.8"
rand_core = "0.6"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
embedded-sdmmc = "0.7.0"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = false
opt-level = 3           # optimize for speed (set back to z for binary size)
overflow-checks = false
lto = "fat"
